# test_for_mobile

./: .env  .gitignore  pyproject.toml
api/: __init__.py  api_client.py  objects_api.py  routes.py
models/: Action.py  Test_data.py  User.py  __init__.py
tests/: test_objects.py
utils/: __init__.py  random_string.py
