[tool.poetry]
name = "test-for-mobile"
version = "0.1.0"
description = ""
authors = ["kein <fardz9@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
pydentic = "^0.0.1.dev3"
httpx = "^0.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
