[tool.poetry]
name = "test-for-mobile"
version = "0.1.0"
description = ""
authors = ["kein <fardz9@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
httpx = "^0.25.2"
requests = "^2.31.0"
pydantic = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
